--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,9 @@
 name: "Golem's Github npm package registry publisher"
 on:
   workflow_call:
+      secrets:
+        token:
+          required: true
 
   
 jobs:
@@ -26,7 +29,7 @@ jobs:
           # Setup npm for publishing
           touch .npmrc
           npm config set registry https://npm.pkg.github.com
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.token }}" >> .npmrc
           echo "@$ORG:registry=https://npm.pkg.github.com" >> .npmrc
 
           # Login and publish the package
