replace in package.json and package-lock.json name of package

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -93,9 +93,8 @@ jobs:
 
           # Update the version in package.json
           jq --arg VERSION "$VERSION" '.version = $VERSION' package.json > temp.json && mv temp.json package.json
-          jq --arg PACKAGE_NAME "$PACKAGE_NAME" '.name = $PACKAGE_NAME' package.json > temp.json && mv temp.json package.json
-
-          cat package.json
+          sed -i -e "s/\"name\": \"$PACKAGE_NAME\"/\"name\": \"@$ORG\/$PACKAGE_NAME\"/g" package.json
+          sed -i -e "s/\"name\": \"$PACKAGE_NAME\"/\"name\": \"@$ORG\/$PACKAGE_NAME\"/g" package-lock.json
 
           npm publish --access public
 
