--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,7 @@ jobs:
           # Extract the last numeric part of the version
           LAST_VERSION=$(echo "$VERSION" | grep -Eo "[0-9]+$" || echo "")
           PACKAGE_NAME=$(jq -r '.name' package.json)
+          ORGINAL_PACKAGE_NAME=$PACKAGE_NAME
           PACKAGE_NAME=@$ORG/$PACKAGE_NAME
 
           if [[ -z "$LAST_VERSION" ]]; then
@@ -93,8 +94,8 @@ jobs:
 
           # Update the version in package.json
           jq --arg VERSION "$VERSION" '.version = $VERSION' package.json > temp.json && mv temp.json package.json
-          sed -i -e 's/"name\": "$PACKAGE_NAME"/"name": "@$ORG\/$PACKAGE_NAME"/g' package.json
-          # sed -i -e 's/"name\": "$PACKAGE_NAME"/"name": "@$ORG\/$PACKAGE_NAME"/g' package-lock.json
+          sed -i -e 's/"name": "$ORGINAL_PACKAGE_NAME"/"name": "$PACKAGE_NAME"/g' package.json
+          # sed -i -e 's/"name": "$ORGINAL_PACKAGE_NAME"/"name": "$PACKAGE_NAME"/g' package-lock.json
 
           cat package.json
 
