--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: "Golem's Github npm package registry publisher"
+name: "Github npm package registry publisher"
 on:
   workflow_call:
       secrets:
@@ -96,7 +96,7 @@ jobs:
           jq --arg VERSION "$VERSION" '.version = $VERSION' package.json > temp.json && mv temp.json package.json
           echo $ORGINAL_PACKAGE_NAME
           echo $PACKAGE_NAME
-          sed -i -e 's/"name": "$ORGINAL_PACKAGE_NAME"/"name": "$PACKAGE_NAME"/g' package.json
+          sed -i -e "s|\"name\": \"$ORGINAL_PACKAGE_NAME\"|\"name\": \"$PACKAGE_NAME\"|g" package.json
           # sed -i -e 's/"name": "$ORGINAL_PACKAGE_NAME"/"name": "$PACKAGE_NAME"/g' package-lock.json
 
           cat package.json
